--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
-        "filament/filament": "^2.17",
+        "filament/filament": "^3.0",
         "illuminate/contracts": "^10.0",
         "spatie/laravel-package-tools": "^1.12",
         "spatie/laravel-translatable": "^6.5"
@@ -28,7 +28,7 @@
     },
     "autoload": {
         "psr-4": {
-            "Codedor\\OnlineScope\\": "src",
+            "Codedor\\OnlineScope\\": "src"
         }
     },
     "autoload-dev": {
